updated getGoods request using dapper
