# Presentation/Controllers/GoodController.cs
@@ -8,11 +8,11 @@ namespace Presentation.Controllers;
 public class GoodController(ILogger<GoodController> logger, IMediator mediator) : ControllerBase
 {
     [HttpGet("/goods")]
-    public async Task<IActionResult> GetAllGoods(CancellationToken cancellationToken)
+    public async Task<IActionResult> GetAllGoods(int? minPrice, int? maxPrice, CancellationToken cancellationToken)
     {
         logger.LogInformation("HTTP GET /goods");
         
-        var goods = await mediator.Send(new GetGoodsQuery(), cancellationToken);
+        var goods = await mediator.Send(new GetGoodsQuery(minPrice, maxPrice), cancellationToken);
         return Ok(goods);
     }
 }
